[fix] : 유저 동별 전체조회에서 동별로 하나만 뜨는 에러 수정